// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CommandPalette > renders with as correctly 1`] = `
"<div style="pointer-events: auto;" dir="ltr">
  <div class="relative"><input type="text" placeholder="Type a command or search..." class="relative block w-full disabled:cursor-not-allowed disabled:opacity-75 focus:outline-none border-0 rounded-md placeholder-gray-400 dark:placeholder-gray-500 text-sm gap-2.5 px-3.5 py-2.5 bg-transparent focus:ring-0 focus:shadow-none" aria-expanded="true" aria-controls="" aria-disabled="false" aria-autocomplete="list" role="combobox" autocomplete="false">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="" id="radix-vue-combobox-content-1" role="listbox" data-state="open" style="display: flex; flex-direction: column; outline-color: none; outline-style: none; outline-width: initial;" data-dismissable-layer="">
    <div class="">No options</div>
  </div>
  <!---->
</div>"
`;

exports[`CommandPalette > renders with class correctly 1`] = `
"<div style="pointer-events: auto;" dir="ltr">
  <div class="relative"><input type="text" placeholder="Type a command or search..." class="relative block w-full disabled:cursor-not-allowed disabled:opacity-75 focus:outline-none border-0 rounded-md placeholder-gray-400 dark:placeholder-gray-500 text-sm gap-2.5 px-3.5 py-2.5 bg-transparent focus:ring-0 focus:shadow-none" aria-expanded="true" aria-controls="" aria-disabled="false" aria-autocomplete="list" role="combobox" autocomplete="false">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="" id="radix-vue-combobox-content-2" role="listbox" data-state="open" style="display: flex; flex-direction: column; outline-color: none; outline-style: none; outline-width: initial;" data-dismissable-layer="">
    <div class="">No options</div>
  </div>
  <!---->
</div>"
`;

exports[`CommandPalette > renders with default slot correctly 1`] = `
"<div style="pointer-events: auto;" dir="ltr">
  <div class="relative"><input type="text" placeholder="Type a command or search..." class="relative block w-full disabled:cursor-not-allowed disabled:opacity-75 focus:outline-none border-0 rounded-md placeholder-gray-400 dark:placeholder-gray-500 text-sm gap-2.5 px-3.5 py-2.5 bg-transparent focus:ring-0 focus:shadow-none" aria-expanded="true" aria-controls="" aria-disabled="false" aria-autocomplete="list" role="combobox" autocomplete="false">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="" id="radix-vue-combobox-content-4" role="listbox" data-state="open" style="display: flex; flex-direction: column; outline-color: none; outline-style: none; outline-width: initial;" data-dismissable-layer="">
    <div class="">No options</div>
  </div>
  <!---->
</div>"
`;

exports[`CommandPalette > renders with ui correctly 1`] = `
"<div style="pointer-events: auto;" dir="ltr">
  <div class="relative"><input type="text" placeholder="Type a command or search..." class="relative block w-full disabled:cursor-not-allowed disabled:opacity-75 focus:outline-none border-0 rounded-md placeholder-gray-400 dark:placeholder-gray-500 text-sm gap-2.5 px-3.5 py-2.5 bg-transparent focus:ring-0 focus:shadow-none" aria-expanded="true" aria-controls="" aria-disabled="false" aria-autocomplete="list" role="combobox" autocomplete="false">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="" id="radix-vue-combobox-content-3" role="listbox" data-state="open" style="display: flex; flex-direction: column; outline-color: none; outline-style: none; outline-width: initial;" data-dismissable-layer="">
    <div class="">No options</div>
  </div>
  <!---->
</div>"
`;
